--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" id="inputBox">
         <div>
             <button class="oprators">AC</button>
             <button class="oprators">DEL</button>
